--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
 
     <form id="signup" class="form">
-      <h1>Sign Up</h1>
+      <h1>Register</h1>
       <div class="form-field">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username" autocomplete="off">
